--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,35 @@
+#----------------------------------------------------------------------
+#Most Important Settings
+#----------------------------------------------------------------------
 set-option -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm:colors=256'
+set-option -g status-position top
+set -g default-shell /usr/local/bin/zsh
+
+#----------------------------------------------------------------------
+#Status Bar Settings
+#----------------------------------------------------------------------
+set-option -g status-left-length 20
+set-option -g status-left '#[fg=green]:[#S] #[fg=yellow]#I :[#P]'
+set-option -g status-right-length 60
+set-option -g status-right '#(get_load_average_tmux)#(get_battery_tmux)#[fg=white]  %m月%d日(%a)|%p %l:%M %Z '
+set-option -g status-interval 1
+
+# Change color statusbar
+set -g status-fg white
+set -g status-bg "colour236"
+
+# Put Windowlist on centre
+set -g status-justify "centre"
+set-window-option -g window-status-current-format "#[fg=colour255,bg=colour27,bold] >>#I: #W"
+#default
+#set-option -g status-right '#(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
+
+
 
 #utf8を有効にする
-#set-window-option -g utf8 on
+#set-window-option -g utf-8 on
+#(get_volume_tmux)
 
 #ウィンドウ履歴の最大行数
 set-option -g history-limit 5000
@@ -13,13 +40,14 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+#Change key bind split
+bind - split-window -v
+bind | split-window -h
+
 #
 # view
 #
 
-# Change color statusbar
-set -g status-fg white
-set -g status-bg black
 
 # To Highlight active window
 setw -g window-status-current-fg white
