--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,9 +10,9 @@ set -g default-shell /usr/local/bin/zsh
 #Status Bar Settings
 #----------------------------------------------------------------------
 set-option -g status-left-length 20
-set-option -g status-left '#[fg=green]:[#S] #[fg=yellow]#I :[#P]'
+set-option -g status-left '#{?client_prefix,#[bg=red],} #[fg=green]:[#S] #[fg=yellow]#I :[#P]'
 set-option -g status-right-length 60
-set-option -g status-right '#(get_load_average_tmux)#(get_battery_tmux)#[fg=white]  %m月%d日(%a)|%p %l:%M %Z '
+set-option -g status-right '#(get_load_average_tmux)#(get_ssid_tmux)#(get_battery_tmux)#[fg=white]  %m月%d日(%a)|%p %l:%M %Z '
 set-option -g status-interval 1
 
 # Change color statusbar
@@ -21,7 +21,7 @@ set -g status-bg "colour236"
 
 # Put Windowlist on centre
 set -g status-justify "centre"
-set-window-option -g window-status-current-format "#[fg=colour255,bg=colour27,bold] >>#I: #W"
+set-window-option -g window-status-current-format "#[fg=colour255,bg=colour32,bold] >>#I: #W"
 #default
 #set-option -g status-right '#(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
 
