Add AutoInstall homebrew,Sepalete alias for each user

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,6 +40,15 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+unbind Left
+bind -r Left resize-pane -L 5
+unbind Down
+bind -r Down resize-pane -D 5
+unbind Up
+bind -r Up resize-pane -U 5
+unbind Right
+bind -r Right resize-pane -R 5
+
 #Change key bind split
 bind - split-window -v
 bind | split-window -h
