Little bit change for tmux menubar Change: on .tmux.conf         Use bold font for name of pain Add: on .zshrc         alias :q for zsh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ set -g default-shell /usr/local/bin/zsh
 #Status Bar Settings
 #----------------------------------------------------------------------
 set-option -g status-left-length 20
-set-option -g status-left '#{?client_prefix,#[bg=red],} #[bold]#[default]#[fg=green]:[#S] #[fg=yellow]#I :[#P]'
+set-option -g status-left '  #{?client_prefix,#[bg=colour33],}#[bold]#[fg=white] #S #[default]#[fg=yellow] #I :[#P]'
 set-option -g status-right-length 64
 set-option -g status-right '#(get_load_average_tmux)#(get_neotmp_sh) #(get_ssid_tmux)#(get_battery_tmux) #[bold]|#[default]#[fg=white] %m月%d日(%a) %p%l:%M'
 set-option -g status-interval 1
