Add function AutoInstall.sh
Auto put Symbolic link funciton can be work

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,9 @@
 #----------------------------------------------------------------------
+# Change prefix
+#----------------------------------------------------------------------
+#set -g prefix 'C-\'
+
+#----------------------------------------------------------------------
 #Most Important Settings
 #----------------------------------------------------------------------
 set-option -g default-terminal "screen-256color"
@@ -53,6 +58,20 @@ bind -r Right resize-pane -R 5
 bind - split-window -v
 bind | split-window -h
 
+#Change Prefix Key
+set -g prefix C-b
+
+#----------------------------------------------------------------------
+# Copy setting like vim
+#----------------------------------------------------------------------
+set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"
+setw -g mode-keys vi
+bind-key    -T copy-mode-vi v     send-keys -X begin-selection
+bind-key    -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key    -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+
+#----------------------------------------------------------------------
 #
 # view
 #
