--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,10 @@ set-window-option -g window-status-current-format "#[fg=colour255,bg=colour240,b
 #default
 #set-option -g status-right '#(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
 
+#----------------------------------------------------------------------
+#pane color settings
+#----------------------------------------------------------------------
+set -g pane-active-border-style fg=colour14
 
 
 #utf8を有効にする
