プロンプトが、gitのブランチの有無、ブランチ名の長さの変動に対応。 シェルスクリプトでpowerline作った。

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,9 @@
 #----------------------------------------------------------------------
 # Change prefix
 #----------------------------------------------------------------------
-#set -g prefix 'C-\'
+set -g prefix 'C-\'
+
+unbind C-b
 
 #----------------------------------------------------------------------
 #Most Important Settings
@@ -62,8 +64,9 @@ bind -r Right resize-pane -R 5
 bind - split-window -v
 bind | split-window -h
 
-#Change Prefix Key
-set -g prefix C-b
+
+#enale mouse
+setw -g mouse on
 
 #----------------------------------------------------------------------
 # Copy setting like vim
