--- a/sampler/defineAsDefault.yml
+++ b/sampler/defineAsDefault.yml
@@ -1,18 +1,14 @@
 runcharts:
-  - title: Search engine response time
-    rate-ms: 500        # sampling rate, default = 1000
-    scale: 2            # number of digits after sample decimal point, default = 1
+  - title: Load Average
+    rate-ms: 1000
+    scale: 2
     legend:
-      enabled: true     # enables item labels, default = true
-      details: false    # enables item statistics: cur/min/max/dlt values, default = true
+        enabled: true
+        details: true
     items:
-      - label: GOOGLE
-        sample: curl -o /dev/null -s -w '%{time_total}'  https://www.google.com
-        color: 178      # 8-bit color number, default one is chosen from a pre-defined palette
-      - label: YAHOO
-        sample: curl -o /dev/null -s -w '%{time_total}'  https://search.yahoo.com
-      - label: BING
-        sample: curl -o /dev/null -s -w '%{time_total}'  https://www.bing.com
+        - label: 1 min
+          sample: echo "$(uptime | awk '{print $(NF-2)}')"
+
 
 sparklines:
   - title: CPU usage
