--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,7 @@ set -g default-shell /usr/local/bin/zsh
 set-option -g status-left-length 20
 set-option -g status-left '  #{?client_prefix,#[bg=colour33],}#[bold]#[fg=white] #S '
 set-option -g status-right-length 64
-set-option -g status-right 'la. #(get_load_average_tmux) | #(get_neotmp_sh) #(get_ssid_tmux)#(get_battery_tmux) #[bold]|#[default]#[fg=white] %m月%d日(%a) %p%l:%M'
+set-option -g status-right 'la. #(get_load_average_tmux) | #(disphomeinfo) #(get_ssid_tmux)#(get_battery_tmux) #[bold]|#[default]#[fg=white] %m月%d日(%a) %p%l:%M'
 set-option -g status-interval 1
 
 # Change color statusbar
@@ -31,6 +31,9 @@ set -g status-justify "centre"
 set-window-option -g window-status-current-format "#[fg=colour255,bg=colour240,bold] #I: #W"
 #default
 #set-option -g status-right '#(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
+
+#window number base index
+set -g base-index 1
 
 #----------------------------------------------------------------------
 #pane color settings
