--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@
 set-option -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm:colors=256'
 set-option -g status-position top
-set -g default-shell /usr/local/bin/zsh
+set -g default-shell /bin/zsh
 
 #----------------------------------------------------------------------
 #Status Bar Settings
@@ -64,7 +64,7 @@ set -g prefix C-b
 #----------------------------------------------------------------------
 # Copy setting like vim
 #----------------------------------------------------------------------
-set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"
+#set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"
 setw -g mode-keys vi
 bind-key    -T copy-mode-vi v     send-keys -X begin-selection
 bind-key    -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
@@ -77,7 +77,3 @@ bind-key    -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to
 #
 
 
-# To Highlight active window
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
