--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ set -g default-shell /bin/zsh
 set-option -g status-left-length 20
 set-option -g status-left '  #{?client_prefix,#[bg=colour33],}#[bold]#[fg=white] #S '
 set-option -g status-right-length 64
-set-option -g status-right '#(get_load_average_tmux)#(get_neotmp_sh) #(get_ssid_tmux)#(get_battery_tmux) #[bold]|#[default]#[fg=white] %m月%d日(%a) %p%l:%M'
+set-option -g status-right '#[bold]|#[default]#[fg=white] %m月%d日(%a) %p%l:%M'
 set-option -g status-interval 1
 
 # Change color statusbar
@@ -28,8 +28,7 @@ set -g status-bg "colour236"
 set -g status-justify "centre"
 set-window-option -g window-status-current-format "#[fg=colour255,bg=colour240,bold] #I: #W"
 #default
-#set-option -g status-right '#(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
-
+#set-option -g status-right '[%Y-%m-%d(%a) %H:%M]'
 
 
 #utf8を有効にする
@@ -70,6 +69,7 @@ bind-key    -T copy-mode-vi v     send-keys -X begin-selection
 bind-key    -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 bind-key    -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
+set -s escape-time 0 # ESCの反応を0msにする？
 
 #----------------------------------------------------------------------
 #
